--- a/templates/topset.html
+++ b/templates/topset.html
@@ -28,7 +28,7 @@
                     <div class="relative">
                         <select
                             class="block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-                            id="grid-state">
+                            id="grid-state" name="exercise_id">
                             {% for e in exercises %}
                             <option value="{{ e['ExcerciseId'] }}" {% if topset['ExcerciseId']==e['ExcerciseId'] %}
                                 selected {% endif %}>{{
@@ -50,7 +50,7 @@
                     </label>
                     <input
                         class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-                        id="grid-city" type="number" value="{{ topset['Repetitions']}}">
+                        id="grid-city" type="number" value="{{ topset['Repetitions']}}" name="repetitions">
                 </div>
 
                 <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
@@ -59,7 +59,7 @@
                     </label>
                     <input
                         class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-                        id="grid-zip" type="number" value="{{ topset['Weight']}}">
+                        id="grid-zip" type="number" value="{{ topset['Weight']}}" name="weight">
                 </div>
             </div>
             <button
